--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <header>
             <img scr="https://static.toiimg.com/thumb/msid-56833673,width-1200,height-900,resizemode-4/.jpg">
             <button type="button" title="Home Button">
-              <a href="#startHere">
+              <a href="https://kamehameha-studios.github.io">
                 Kamehameha Studios
               </a>
             </button>
